# openmaterials

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE-DATA  NOTICE  PRODUCT.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES  pyproject.toml
.github/workflows/: ci.yml  lean.yml
docs/: CNAME  dag.html  followups.md  index.html  materialscodegraph-integration.md  openmaterials.tex  operator_representation_substrate.tex  pipeline.html  state_map.tex  symbolic_substrate.tex  vision.tex  worked_example_silicon.tex
docs/agreement/: index.html
docs/assets/: site.css  site.js
docs/codes/: index.html
docs/data/: agreement.json  catalog.json  codes.json  configurations.json  distances.json  graph.json  instances.json  lean.json  lean_roadmap.json  lineage.json  physlib_crosswalk.json  semantics.json  spectra.json  version.json  versions.json
docs/deck/: index.html
docs/distance/: 2026-07-18-distance-configuration-design.md  2026-07-19-multiscale-design.md  2026-07-20-simulation-distance-design.md
docs/document/: index.html
docs/examples/: README.md  a-si-kappa-qhgk.json  ge-kappa-kaldo.json  graphene-kappa-measured.json  index.json  ptse2-kappa-bte.json  si-diamond-kappa-dfpt.json  si-elastic-c11-pimd.json  si-kappa-kaldo-direct.json  si-kappa-kaldo-rta.json  sige-zt-qhgk.json  tan-kappa-shengbte.json
docs/experiment/: index.html
docs/guide/: index.html
docs/lean/: index.html  lib.js  lib.test.js
docs/learn/: index.html  lib.js  lib.test.js
docs/lineage/: index.html
docs/map/: index.html
docs/map-3d/: index.html
docs/map-lab/: constellation.html  index.html  orbit.html  rivers.html  strata.html
docs/map-trace/: index.html
docs/play/: distance.js  example-proposal.json  index.html
docs/skills/: README.md  extend_dag.md  ingest_code.md
docs/slides/: index.html
examples/: README.md  distance_quickstart.py  quickstart.py
experiments/germanium_tersoff/: run_kaldo.py  run_phonopy.py  seed.py  spec_demo.py
experiments/nacl_polar/: run_phonopy_nacl.py
experiments/qe_si_crosscheck/: README.md  final_compare.py  si.matdyn.in  si.ph.in  si.q2r.in
experiments/silicon_shengbte/: CONTROL  compare_to_kaldo.py  convert.py  verify_operator_agreement.py  verify_symbolic_agreement.py
experiments/silicon_tersoff/: README.md  compare.py  diagnostic_fc3_factor_222.py  diagnostic_lfactor_convention.py  diagnostic_unscaled_fc3.py  extract_diagnostics.py  run_kaldo.py  run_kaldo_adaptive.py  run_kaldo_adaptive_sym.py  run_lammps_gk.py  (+7 more)
index/: README.md
lean/: LintProbe.lean  OpenMaterials.lean  OpenMaterialsDimensions.lean  OpenMaterialsIdentities.lean  OpenMaterialsUnits.lean  README.md  check.sh  lake-manifest.json  lakefile.toml
map/: GENESIS  README.md  log.jsonl
omai/: __init__.py  badge.py  configurations.py  cross_code.py  distance_data.py  doc_html.py  gates.py  genesis.py  index_data.py  lean_identities.py  lean_roadmap.py  lean_units.py  lineages.py  map_data.py  mermaid.py  paper_db.py  physlean_export.py  semantics.py  simulations.py  store.py  sync.py
omdc/: README.md  __init__.py  adapters.py  benchmark.py  envset.py  errors.py  index.py  profile.py  registry.py  store.py
omds/: README.md  __init__.py  fields.py  mapgraph.py  records.py  registry.py
scans/: README.md  amset-atomistic-skills.json  amset-atomistic-skills.md  atomate2-vasp-atomistic-skills.json  atomate2-vasp-atomistic-skills.md  characterization-atomistic-skills.json  characterization-atomistic-skills.md  config-thermo-atomistic-skills.json  config-thermo-atomistic-skills.md  cookbook-audit.json  cookbook-audit.md  kaldo-delta.json  kaldo-delta.md  lammps-thermal.json  lammps-thermal.md  map-physics-review-2026-07-10.md  matcalc-ase-atomistic-skills.json  matcalc-ase-atomistic-skills.md  md-chem-bio-atomistic-skills.json  md-chem-bio-atomistic-skills.md  mlip-family-atomistic-skills.json  mlip-family-atomistic-skills.md  mp-api-atomistic-skills.json  mp-api-atomistic-skills.md  orca-atomistic-skills.json  orca-atomistic-skills.md  phonopy-lammps-delta-atomistic-skills.json  phonopy-lammps-delta-atomistic-skills.md  pycalphad-atomistic-skills.json  pycalphad-atomistic-skills.md  pymatgen-atomistic-skills.json  pymatgen-atomistic-skills.md  qe-phonon.json  qe-phonon.md  structure-gen-atomistic-skills.json  structure-gen-atomistic-skills.md
tests/: test_abstract.py  test_ase_lammps_gpumd_adapters.py  test_badge.py  test_beta_label.py  test_catalog.py  test_code_credits.py  test_codes_page.py  test_compare.py  test_compose.py  test_compose_executable.py  test_composites_domain.py  test_config_thermo_domain.py  test_configurations.py  test_conformance_targets.py  test_cross_code.py  test_crystal_symmetry.py  test_dft_domain.py  test_dft_foundations.py  test_dimcheck.py  test_dimensions.py  test_distance_data.py  test_doc_html.py  test_docs_examples.py  test_electronic_transport_domain.py  test_evidence_instances.py  test_examples.py  test_executor.py  test_executor_bridge.py  test_executor_compute.py  test_executor_sum_general.py  test_gates.py  test_gauge.py  test_genesis.py  test_germanium_consolidation.py  test_guide_recipes.py  test_guide_snippets.py  test_identity.py  test_index_data.py  test_ipi_nqe_layer.py  test_kaldo_amorphous_diagnostics.py  (+53 more)
(+538 files in other folders)
