[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmaterials-ai"
version = "0.0.1"
description = "A symbolic substrate for computational materials science"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Giuseppe Barbalinardo", email = "barbalinardo@ucdavis.edu" },
  { name = "Davide Donadio" },
]
dependencies = [
    "pydantic>=2.5",
    "numpy>=1.26",
    "sympy>=1.12",
]

[project.optional-dependencies]
# The paper parser (omai/paper_parser, omai/paper_db) imports these lazily:
# pypdf>=6.1 for PdfReader/PdfWriter and filters.ZLIB_MAX_OUTPUT_LENGTH (the
# decompression guard raised in ingest.py), anthropic for the detect/review
# stages. Declared so installing the parser matches the README's
# "Parse a paper" section instead of failing on the first import.
parser = [
    "pypdf>=6.1",
    # the MAP stage uses output_config structured outputs and detect streams
    # via client.messages.stream; 0.116 is the version the pipeline is
    # developed and tested against, and older SDKs predate output_config.
    "anthropic>=0.116",
]
# dev carries the parser deps too: tests/test_paper_parser.py imports pypdf
# unconditionally, so a fresh `pip install -e ".[dev]" && pytest` must pass.
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pypdf>=6.1",
    "anthropic>=0.116",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["omai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
